--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     <div class="col">
                         <form>
                             <div class="pzGameSettings row mb-3">
-                                <button type="submit" class="btn btn-primary">New Game</button>
+                                <button id="new-game" type="submit" class="btn btn-primary">New Game</button>
                             </div>
                             <div class="row mb-3">
                                 <select class="mb-2" name="form-select" id="tiles-number">
@@ -50,18 +50,18 @@
                 <div class="pzGameTiles row p-5">
                     <div class="col">
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="0" data-row="0">0</div>
-                            <div class="pzTile col" data-column="0" data-row="1">1</div>
-                            <div class="pzTile col" data-column="0" data-row="2">2</div>
+                            <div class="pzTile col" data-column="0" data-row="0"></div>
+                            <div class="pzTile col" data-column="0" data-row="1"></div>
+                            <div class="pzTile col" data-column="0" data-row="2"></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="1" data-row="0">3</div>
-                            <div class="pzTile col" data-column="1" data-row="1">4</div>
-                            <div class="pzTile col" data-column="1" data-row="2">5</div>
+                            <div class="pzTile col" data-column="1" data-row="0"></div>
+                            <div class="pzTile col" data-column="1" data-row="1"></div>
+                            <div class="pzTile col" data-column="1" data-row="2"></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="2" data-row="0">6</div>
-                            <div class="pzTile col" data-column="2" data-row="1">7</div>
+                            <div class="pzTile col" data-column="2" data-row="0"></div>
+                            <div class="pzTile col" data-column="2" data-row="1"></div>
                             <div class="pzTile col" data-column="2" data-row="2"></div>
                         </div>
                     </div>
@@ -77,5 +77,6 @@
 
     <!-- All scripts go here -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
