--- a/src/index.html
+++ b/src/index.html
@@ -50,19 +50,19 @@
                 <div class="pzGameTiles row p-5">
                     <div class="col">
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="0" data-row="0"></div>
-                            <div class="pzTile col" data-column="0" data-row="1"></div>
-                            <div class="pzTile col" data-column="0" data-row="2"></div>
+                            <div class="pzTile col" data-position="0"></div>
+                            <div class="pzTile col" data-position="1"></div>
+                            <div class="pzTile col" data-position="2"></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="1" data-row="0"></div>
-                            <div class="pzTile col" data-column="1" data-row="1"></div>
-                            <div class="pzTile col" data-column="1" data-row="2"></div>
+                            <div class="pzTile col" data-position="3"></div>
+                            <div class="pzTile col" data-position="4"></div>
+                            <div class="pzTile col" data-position="5"></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-column="2" data-row="0"></div>
-                            <div class="pzTile col" data-column="2" data-row="1"></div>
-                            <div class="pzTile col" data-column="2" data-row="2"></div>
+                            <div class="pzTile col" data-position="6"></div>
+                            <div class="pzTile col" data-position="7"></div>
+                            <div class="pzTile col" data-position="8"></div>
                         </div>
                     </div>
                 </div>
