dynamically add numbers to each baord tile

--- a/src/index.html
+++ b/src/index.html
@@ -50,19 +50,19 @@
                 <div class="pzGameTiles row p-5">
                     <div class="col">
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-position="0"></div>
-                            <div class="pzTile col" data-position="1"></div>
-                            <div class="pzTile col" data-position="2"></div>
+                            <div class="pzTile col" data-tileId="0" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="1" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="2" data-currentPosition=""></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-position="3"></div>
-                            <div class="pzTile col" data-position="4"></div>
-                            <div class="pzTile col" data-position="5"></div>
+                            <div class="pzTile col" data-tileId="3" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="4" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="5" data-currentPosition=""></div>
                         </div>
                         <div class="row d-flex justify-content-center">
-                            <div class="pzTile col" data-position="6"></div>
-                            <div class="pzTile col" data-position="7"></div>
-                            <div class="pzTile col" data-position="8"></div>
+                            <div class="pzTile col" data-tileId="6" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="7" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="8" data-currentPosition=""></div>
                         </div>
                     </div>
                 </div>
