implement array of objects for solution tiles

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                         <div class="row d-flex justify-content-center">
                             <div class="pzTile col" data-tileId="6" data-currentPosition=""></div>
                             <div class="pzTile col" data-tileId="7" data-currentPosition=""></div>
-                            <div class="pzTile col" data-tileId="8" data-currentPosition=""></div>
+                            <div class="pzTile col" data-tileId="empty" data-currentPosition=""></div>
                         </div>
                     </div>
                 </div>
