Add scoring system

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
-                    <h4>Player 1: Score</h4>
-                    <h4>Player 2: Score</h4>
-                    <h4>Current Round: 2</h4>
+                <div class="row pzRoundInfo">
+                    <h4 id="pzP1Score">Player 1 score:</h4>
+                    <h4 id="pzP2Score">Player 2 score: </h4>
+                    <h4 id="pzCurrentRound">Current Round: </h4>
                 </div>
             </div>
             <!-- Game canvas -->
