add giveup functionality

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="row pzRoundInfo">
                     <h4 id="pzP1Score">Player 1 score:</h4>
-                    <h4 id="pzP2Score">Player 2 score: </h4>
+                    <h4 id="pzP2Score">Player 2 score:</h4>
                     <h4 id="pzCurrentRound">Current Round: </h4>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="pzRoundControls row justify-content-center">
                     <div class="col">
-                        <div class="pzGiveupBtn btn btn-danger">Give up 😢</div>
+                        <div id="pzGiveupBtn" class="btn btn-danger">Give up 😢</div>
                     </div>
                 </div>
             </div>
