Fix issue where current player wasnt updating in the UI after new round

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="pzRoundData row">
                     <h3 class="pzTimer">00:00</h3>
-                    <h3 class="pzCurrentPlayer">Current Player: Player 1</h3>
+                    <h3 id="pzCurrentPlayer">Current Player: Player 1</h3>
                 </div>
                 <div class="pzGameTiles row p-5">
                     <div class="col">
