Fix issue where p2 score wont update at last round

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
                     <h4 id="pzP1Score">Player 1 score:</h4>
                     <h4 id="pzP2Score">Player 2 score:</h4>
                     <h4 id="pzCurrentRound">Current Round: </h4>
+                    <h4 id="pzWinner"></h4>
                 </div>
             </div>
             <!-- Game canvas -->
