--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                     <div class="col">
                         <form>
                             <div class="pzGameSettings row mb-3">
-                                <button id="new-game" type="submit" class="btn btn-primary">New Game</button>
+                                <button id="pzNewGame" type="submit" class="btn btn-primary">New Game</button>
                             </div>
                             <div class="row mb-3">
                                 <select class="mb-2" name="form-select" id="tiles-number">
@@ -69,7 +69,7 @@
                 </div>
                 <div class="pzRoundControls row justify-content-center">
                     <div class="col">
-                        <div id="pzGiveupBtn" class="btn btn-danger">Give up 😢</div>
+                        <button id="pzGiveupBtn" type="button" class="btn btn-lg btn-danger" disabled>Give up 😢</button>
                     </div>
                 </div>
             </div>
