--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,11 @@
                                 <button id="pzNewGame" type="submit" class="btn btn-primary">New Game</button>
                             </div>
                             <div class="row mb-3">
-                                <select class="mb-2" name="form-select" id="tiles-number">
-                                    <option value="3x3">3x3</option>
-                                    <option value="4x4">4x4</option>
+                                <select class="mb-2" name="form-select" id="pzNumberOfShuffles">
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
                                 </select>
                                 <select name="form-select" id="timer">
                                     <option value="1">1 minute</option>
