Add user option to control number of rounds

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,14 @@
                             </div>
                             <div class="row mb-3">
                                 <select class="mb-2" name="form-select" id="pzNumberOfShuffles">
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
+                                    <option value="2">2 shuffles</option>
+                                    <option value="3">3 shuffles</option>
+                                    <option value="4">4 shuffles</option>
+                                    <option value="5">5 shuffles</option>
                                 </select>
-                                <select name="form-select" id="timer">
-                                    <option value="1">1 minute</option>
-                                    <option value="2">2 minutes</option>
+                                <select name="form-select" id="roundsSelector">
+                                    <option value="2">2 Rounds</option>
+                                    <option value="3">3 Rounds</option>
                                 </select>
                             </div>
                         </form>
