Fix issue where clicing on new game disables give up button

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                                 <button id="pzNewGame" type="submit" class="btn btn-primary">New Game</button>
                             </div>
                             <div class="row mb-3">
-                                <select class="mb-2" name="form-select" id="pzNumberOfShuffles">
+                                <select name="form-select" id="pzNumberOfShuffles">
                                     <option value="2">2 shuffles</option>
                                     <option value="3">3 shuffles</option>
                                     <option value="4">4 shuffles</option>
@@ -29,6 +29,11 @@
                                 <select name="form-select" id="roundsSelector">
                                     <option value="2">2 Rounds</option>
                                     <option value="3">3 Rounds</option>
+                                </select>
+                                <select name="form-select" id="puzzleSelector">
+                                    <option value="00">Numbers</option>
+                                    <option value="01">Underwater</option>
+                                    <option value="02">Mountain</option>
                                 </select>
                             </div>
                         </form>
