Add a free cheat move button

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
                 <div class="pzRoundControls row justify-content-center">
                     <div class="col">
                         <button id="pzGiveupBtn" type="button" class="btn btn-lg btn-danger" disabled>Give up 😢</button>
+                        <button id="pzFreeMove" type="button" class="btn btn-lg btn-primary" disabled>Free move 🌚</button>
                     </div>
                 </div>
             </div>
