Fix mobile responsive

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="container m-5 text-center">
+    <div class="container m-5-md text-center">
         <div class="row">
             <!-- Setting left panel -->
             <div class="pzSettingsPpanel p-3 col-md-4">
@@ -52,7 +52,6 @@
                     <h1>Sliding Puzzle Game</h1>
                 </div>
                 <div class="pzRoundData row">
-                    <h3 class="pzTimer">00:00</h3>
                     <h3 id="pzCurrentPlayer">Current Player: Player 1</h3>
                 </div>
                 <div class="pzGameTiles row p-5">
