--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="container m-5-md text-center">
+    <div class="container m-5-md pt-3 text-center">
         <div class="row">
             <!-- Setting left panel -->
             <div class="pzSettingsPpanel p-3 col-md-4">
@@ -45,6 +45,9 @@
                     <h4 id="pzCurrentRound">Current Round: </h4>
                     <h4 id="pzWinner"></h4>
                 </div>
+                <!-- <div class="row pzPuzzleImage">
+                    <img src="../images/puzzle01/puzzle01.jpg" alt="picture of the solution">
+                </div> -->
             </div>
             <!-- Game canvas -->
             <div class="pzGameCanvas col-md-8">
