add image preview

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
                     <h4 id="pzCurrentRound">Current Round: </h4>
                     <h4 id="pzWinner"></h4>
                 </div>
-                <!-- <div class="row pzPuzzleImage">
-                    <img src="../images/puzzle01/puzzle01.jpg" alt="picture of the solution">
-                </div> -->
+                <div class="row pzPuzzleImage">
+                    <img id="puzzleImg" src="" alt="picture of the solution">
+                </div>
             </div>
             <!-- Game canvas -->
             <div class="pzGameCanvas col-md-8">
